<resources>
    <string name="app_name">NearBuy</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="haven_t_registered_yet">Haven\'t registered yet?</string>
    <string name="register_business">Register Business</string>
</resources>