<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/headerLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/log_in"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgLogin"
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:layout_marginTop="32sp"
        android:src="@drawable/undraw_secure_login_pdn4"
        app:layout_constraintDimensionRatio="5:2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerLogin"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/llLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32sp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/imgLogin">

        <io.ghyeok.stickyswitch.widget.StickySwitch
            android:id="@+id/sticky_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:ss_animationDuration="300"
            app:ss_animationType="curved"
            app:ss_iconPadding="18dp"
            app:ss_iconSize="22dp"
            app:ss_leftIcon="@drawable/ic_baseline_person_outline_24"
            app:ss_leftText="Cons"
            app:ss_rightIcon="@drawable/ic_baseline_business_24"
            app:ss_rightText="Busi"
            app:ss_selectedTextSize="2sp"
            app:ss_sliderBackgroundColor="#eee"
            app:ss_switchColor="@color/caribbean_green"
            app:ss_textColor="@color/white"
            app:ss_textSize="2sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:hint="@string/email"
            app:startIconDrawable="@drawable/ic_baseline_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <!--    TODO: Add forgot password option.   -->

    <Button
        android:id="@+id/btnLogin"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:backgroundTint="@color/caribbean_green"
        android:fontFamily="@font/roboto_medium"
        android:padding="16sp"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/llLogin"
        tools:layout_editor_absoluteX="8dp" />

    <LinearLayout
        android:id="@+id/llSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin">

        <TextView
            android:id="@+id/txtUnregistered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:fontFamily="@font/roboto"
            android:text="@string/haven_t_registered_yet"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnLogin" />

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/roboto"
            android:text="@string/sign_up_here"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnLogin" />
    </LinearLayout>

    <!--    <TextView-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="or continue with"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/llSignup"/>-->


</androidx.constraintlayout.widget.ConstraintLayout>